samples/_failures_safe/1761615975_f8063d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_2b12e2cd.c: In function ‘main’:
./samples/SAFE/__tmp_2b12e2cd.c:175:5: error: expected declaration or statement at end of input
  175 |     while (getchar() != '\n');
      |     ^~~~~
